styles/sitbase.css
/* ... */
#templatevariables
{
    width: 48%; max-height: 700px;
    overflow: scroll; float: right;
    border: 1px solid #CCCCFF;
    z-index: 1;
}

/* tooltip */
a.info img { border: 0px; text-decoration:none;}
a.info span { display: none; z-index: 15; }
a.info:hover { text-decoration: none; }
a.info:hover span
{
  display: block;
  position:absolute;
  background: white;
  width: 34em;
  padding: 1px;
  border:1px solid InfoText;
  text-decoration: none;
  font-weight: normal;
  background-color:#FFFF99; color:#000000 ;
  text-align: left;
  -moz-border-radius: 7px;
  -khtml-border-radius: 7px;
  border-radius: 7px;
  filter:alpha(opacity=85);
  opacity: 0.85;
  -moz-opacity:0.85;
}


div.detailentry, div.detailentryhidden
{
    border: 1px dotted #9C9C9C;
    width: 95%;
    background: #F7FAFF; /* #F7FAFF; */
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2em;
    padding-top: 20px;
    padding-left: 0.5em;
    padding-right: 0.5em;
    padding-bottom: 0.2em;
}

.detailentry img, .detailentryhidden img { border: 0px; }

.detailentry table tr:hover { color: white; }
.detailentry table td { background-color: transparent; }

div.detailhead, div.detailinfo, div.detailheadhidden, div.detailinfohidden
{
    border: 1px solid #CDCEFF;
    background: #F0F0FF;  /* #C5B2D5; */
    padding: 0.2em 0.7em;
    font-size: 120%;
    margin-top: 10px;
    -moz-border-radius: 6px;
    top: 10px;
    margin-left: 7%;
}

div.detailentryhidden, div.detailheadhidden { background: transparent; }

div.detailhead, div.detailheadhidden
{
    max-width: 80%;
    width: 80%;
    position: relative;
}
div.detailinfo, div.detailinfohidden
{
    width: 80%;
    margin-bottom: 2em;
    position: relative;
}
div.detailinfohidden, div.detailheadhidden
{
    border-color: #BDBDBD;
    background: white;
    /* color: #8A888A; */
}
div.detaildate
{
    float: right;
    color: #06377F;
    padding-left: 1em;
    position: relative;
    top: 3px;
}
div.detaildate input[type=text] { color: #06377F; border: 1px dotted #06377F; background: transparent; }

div.detailfoot
{
    border: 1px solid black;
    width: 20%;
    background: #D5DEE6;
    margin-bottom: 1em;
    margin-left: 60%;
}

.statusline { color: green; }

#tail { background:#AAA; color: #fff; padding: 10px 10px; overflow: hidden; }
.datepicker { background-color: #CCCCFF; border: 1px solid black; font-family: monospace; }

div.portalfileicon
{
    float: left; margin-right: 5px;
}

.taglevel1 { color: #7AA3CC; } /*#518BFF;  */
.taglevel2 { color: #3A64B8; }
.taglevel3 { color: #27437B; }
.taglevel4 { color: #1F3663; }

#contentpanel
{
    width: 80%;
}

#menupanel
{
    display: none;
    width: 18%;
    border: 1px solid #ccc;
    float: right;
    min-height: 300px;
    margin-bottom: 2em;
    padding: 2px;
    z-index: 15;
}

.incidentkey
{
    text-align: center;
    margin: 0 auto;
    width: 95%;
    border: 1px solid;
    font-weight: bold;
}

.incidentkey td
{
    width: 25%;
}


.percentcontainer {
    width: 100px; border: 1px solid #ccc; background-color: white; height: 12px;
}

.percentbar {
    text-align: center; height: 12px; font-size: 90%;
    background: #AFAFAF;
    width: 0px; /* default */
}

.configvar h4
{
    text-align: left;
    margin-bottom: 0px;
}


div.tabcontainer { display: block;  }

.tabcontainer ul
{
  margin: 0;
  list-style-type: none;
  padding-bottom: 25px;
  border-bottom: 1px solid #185594;
}
.tabcontainer ul li
{
  display: block;
  float: left;
  height: 23px;
  margin: 1px 1px 0 1px;
  border: 1px solid #185594;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  border-bottom: 1px solid #fff;
  text-align: center;
  background: #185594;
  /*padding: 0;*/
  /*margin: 0;*/
}

.tabcontainer ul li a
{

 /* background: #fff;*/
  width: 78px;
  height: 23px;
  /*border: 1px solid #185594;*/
  padding: 0;
  margin: 0 0 10px 0;
  color: #fff;
  text-decoration: none;
  display: block;
  text-align: center;
  padding-top: 4px;
}

.tabcontainer ul li a:hover
{
  color: #185594;
  background: #EEF6FF;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
}

.tabcontainer a:active
{
/*   background: #FFF; */
  color: #fff;
}

.tabcontainer li.active a
{
  /*background: #185594;*/
 /* border: 1px solid #185594;*/
  color: #fff;
  color: #185594;
}

.tabcontainer li.active
{
    background: white;
}

.smalltabs { clear: both; margin-top: 5px; margin-bottom: 10px;}
.smalltabs ul
{
  margin: 0 30px 0px;
  padding: 0 0 20px 10px;
  border-bottom: 4px solid transparent;
  list-style-type: none;
}
.smalltabs ul li
{
  display: inline;
}
.smalltabs a:link, .smalltabs a:visited
{
  float: left;
  line-height: 14px;
  font-weight: bold;
  margin: 0 10px 4px 10px;
  text-decoration: none;
  color: #999;
}

.smalltabs ul li.active a:link, .smalltabs ul li.active a:visited, .smalltabs a:hover
{
  border-bottom: 3px solid #185594;
  padding-bottom: 2px;
  background: transparent;
  color: #185594;
}

#navlist a:hover { color: #000; }

.configvar p
{
    text-align: left;
    margin-top: 0.1em;
    margin-bottom: 0.2em;
}

#catintro
{
    margin: 10px 0px;
    -moz-border-radius: 7px; -khtml-border-radius: 7px; border-radius: 7px;
    background: #EEF6FF;
    padding: 1em;
}


table.vertical td { vertical-align: top; }

.droptarget { border: 2px dashed #ccc;}

